welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
      recule()
            ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
      if(getCouleurSol()==Color.green){
      ^