welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    if (!estFaceMur()){
      avance()
      if(getCouleurSol()==Color.green){
        return true
      recule()
      }
      
    }
  	else {
      return false
    }
}